# wayscrollshot

./: .gitignore  Cargo.toml  README.md  README_CN.md  flake.nix  qs.py
.claude/: settings.json
.github/workflows/: build.yml
scripts/: update-aur-bin.sh
src/: capture.rs  cli.rs  constants.rs  main.rs  output.rs  overlay.rs  region_overlay.rs  session.rs  stitch.rs  types.rs
src/overlay/: drawing.rs  placement.rs
