[package]
name = "wayscrollshot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
smithay-client-toolkit = "0.19"
tiny-skia = "0.11"
wayland-client = "0.31"
