[package]
name = "wayscrollshot"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11"
hora = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.24"
log = "0.4"
opencv = { version = "0.98", default-features = false, features = ["clang-runtime", "calib3d", "features2d", "imgproc"] }
rayon = "1.10"
smithay-client-toolkit = "0.19"
tiny-skia = "0.11"
wayland-client = "0.31"
